@@ -1,3 +1,7 @@
+2012-11-06  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 10.10.0-digiumphones Released.
+
 2012-11-05  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 10.10.0-digiumphones-rc2 Released.
